# flex2-prospector-AI

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
assistant/: app.py  email_reply.py  interaction_test.py  run.py  test.py
assistant/api/: sagemaker_client.py
assistant/common/: constant.py
assistant/data_handler/: data_handler.py
assistant/model/: all_sequence_cat.py  llm.py  outreach_model.py  reply_model.py  sequence_model.py
assistant/model/prompts/: out_reach_prompt.py  reply_prompt.py
experiments/: sequence_model.ipynb  test_tool.ipynb
experiments/common/: ds_lib.py  utils.py
experiments/common/.ipynb_checkpoints/: utils-checkpoint.py
experiments/notebooks/: data_query.ipynb  llama2_fine_tuning.ipynb  llm.ipynb  sequence_cat.ipynb  sequence_exp.ipynb  sequence_performance.ipynb  template.json  test_tool.ipynb  train.jsonl
experiments/notebooks/.ipynb_checkpoints/: content_data_gen-checkpoint.ipynb  data_query-checkpoint.ipynb  llama2_fine_tuning-checkpoint.ipynb  llm-checkpoint.ipynb  sequence_cat-checkpoint.ipynb  sequence_exp-bk-checkpoint.ipynb  sequence_exp-checkpoint.ipynb  template_exp-checkpoint.ipynb  test-checkpoint.ipynb  test_tool-checkpoint.ipynb
experiments/sql/: deal_query.sql  email_query.sql  sequence_query.sql
resource/: category_encode_map.pkl  email_template.json  lead_info.csv  revert_class_map.pkl
