[tool.black]
line-length=88
target-version = ['py11']
include = '\.pyi?$'
exclude = '''
    /(
        \.git
      | \.idea
      | \.venv
      | venv
      | build
      | dist
    )/
    '''

[tool.poetry]
name = "flex2-prospector-AI"
version = "0.1.0"
description = "leverage AI to improve productivity of sales team"
authors = ["xiangping@getflex.com"]

[tool.poetry.dependencies]
hubspot-api-client = {git = "https://github.com/HubSpot/hubspot-api-python.git", rev = "v8.0.0"}
langchain = "^0.0.249"
pandas="2.0.3"
numpy = "^1.25.2"
requests-ratelimiter = "^0.4.1"

[tool.poetry.group.dev.dependencies]
mysql-connector-python = "^8.0.31"
pytest = "7.4.0"
pytest-asyncio = "0.21.1"


[tool.poetry.scripts]
generate_openapi = 'client.generate_openapi:print_openapi'

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
